tests/syntax_error/c_not.jou
def foo() -> None:
    if !x:  # Error: use 'not' instead of '!'
        pass
